--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -1504,27 +1504,24 @@ up-regulation)
 SERPINH1? with TIMP3 
 % http://www.proteinatlas.org/ENSG00000149257-SERPINH1/tissue/placenta
 
-\subsection{DAVID Analyses of Individual Transcriptomes}
+\subsection{topGO Analyses of Individual Transcriptomes}
 
 In order to identify major functional categories of genes expressed in
 the individual transcriptomes, we undertook functional annotation
-clustering analyses using DAVID (see Methods). Concentrating on genes
-with relatively high expression values, we conducted DAVID analyses
-using a list of genes with \ac{FPKM} values included within the top 5\%
-distribution of expressed genes. Functional annotation clusters from
-all six placenta transcriptomes show enrichment in similar clusters of
-genes (Supplemental Table X). Significant enrichment in genes (ES>1.3,
-p>0.05) in the top 5\% of \ac{FPKM} values in at least five transcriptomes
-included clusters such as ribosome, vesicle, cytoskeleton,
-glycoprotein, lysosome, annexins, hormone stimulus or response,
-growth, calcium binding, cell migration, basement membrane,
-antioxidant activity or oxidative stress, cell adhesion, and
-mitochondrion among others (Supplemental Table X).
+clustering analyses using topGO. We examined \ac{GSE} in 1:1 human
+orthologs which had \ac{FPKM} values in the top 5\% of expressed genes
+%
+Significant enrichment in genes ($\mathrm{FDR}\le0.05$) in the top 5\%
+of \ac{FPKM} values in at least 12 of the
+\Sexpr{length(species.names)} species included clusters such as
+membrane organization , locomotion, tissue development, extracellular
+matrix organization, regulation of peptidase activity, and various
+cell death related pathways among others
+(\cref{tab:go_terms_all_species}).
 
-We also investigated enrichment in functional annotation clusters in
-the top 100 genes of each transcriptome (Table 9). As in the analyses
-of the top 5\% of genes, the top 100 genes show significant enrichment
-(ES>1.3) in all six transcriptomes in genes associated with ribosomes.
+(Supplemental %
+\cref{tab:go_terms_enriched_dasypus_novemcinctus,tab:go_terms_enriched_equus_caballus,tab:go_terms_enriched_homo_sapiens,tab:go_terms_enriched_loxodonta_africana,tab:go_terms_enriched_monodelphis_domestica,tab:go_terms_enriched_mus_musculus,tab:go_terms_enriched_ovis_aries,tab:go_terms_enriched_pan_paniscus,tab:go_terms_enriched_sus_scrofa,tab:go_terms_enriched_ateles_fusciceps,tab:go_terms_enriched_nannospalax_galili,tab:go_terms_enriched_spalax_carmeli,tab:go_terms_enriched_bos_taurus,tab:go_terms_enriched_canis_familiaris}.) %
+
 Human shows enrichment in clusters such as collagen-binding, hormone
 activity, female pregnancy, coagulation, and the defense response.
 Bonobo shows enrichment in clusters related to apoptosis,
@@ -1539,28 +1536,47 @@ genes involved in apoptosis, oxidative stress, mitochondrion, hormone
 metabolism, and lipids.
 
 \begin{table}
+  \footnotesize
 <<go.analysis.all.tissue,echo=FALSE,results="asis">>=
 go.analysis.wide <- 
     data.table(dcast(data=go.results,
                      formula=GO.ID+type+Term+Ontology~species,
                      value.var="FDR"))
 go.analysis.wide <- 
-    go.analysis.wide[,`max(FDR)`:=apply(go.analysis.wide[,-(1:4),with=FALSE],
-                                    1,max,na.rm=TRUE)]
+    go.analysis.wide[,`n(FDR ≤ 0.05)`:=apply(go.analysis.wide[,-(1:4),with=FALSE],1,
+                                         function(x){sum(x <= 0.05)})]
+go.analysis.wide <- 
+    go.analysis.wide[,`max(FDR ≤ 0.05)`:=apply(go.analysis.wide[,-(1:4),with=FALSE],1,
+                                           function(x){if (!any(is.finite(x) & x<=0.05)) {
+                                                           return(NA)
+                                                       } else {
+                                                           max(x[is.finite(x) & x<=0.05],na.rm=TRUE)
+                                                       }})]
 go.analysis.wide.table <- 
-    go.analysis.wide[`max(FDR)` <= 0.1 & grepl("No Housekeeping",type),
-                     list(GO.ID,Term,Ontology,`max(FDR)`)]
+    go.analysis.wide[!is.na(`n(FDR ≤ 0.05)`) & `n(FDR ≤ 0.05)` >= 12 &
+                         grepl("Top 5% No Housekeeping",type),
+                     list(GO.ID,Term,Ontology,`n(FDR ≤ 0.05)`,`max(FDR ≤ 0.05)`)]
 go.analysis.wide.table <- 
-    go.analysis.wide.table[order(`max(FDR)`)]
+    go.analysis.wide.table[order(Ontology,-`n(FDR ≤ 0.05)`,`max(FDR ≤ 0.05)`)]
+setnames(go.analysis.wide.table,"GO.ID","GO ID")
+
 print(xtable(go.analysis.wide.table,
-             display=c("d","s","s","s","e")
+             display=c("d","s","s","s","d","e"),
+             align=  c("c","c","c","c","c","c")
              ),
+      math.style.exponents=TRUE,
+      include.rownames=FALSE,
       booktabs=TRUE,
       floating=FALSE
       )
+
 @ 
-\caption{GO terms with enrichment in all species analyzed with
-  housekeeping genes removed}
+\caption{GO terms with significant enrichment ($\mathrm{FDR}\le0.05$)
+  in 12 or more of the species analyzed from genes in the top 5\% of
+  expression. $n(\mathrm{FDR}\le0.05)$ is the number of species with
+  significant enrichment ($\mathrm{FDR}\le 0.05$) in the GO term
+  listed. $max(\mathrm{FDR}\le0.05)$ is the maximum FDR value in all
+  species with an FDR of less than $0.05$.}
 \label{tab:go_terms_all_species}
 \end{table}
 
