add Gene Set Enrichement acronym

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -11,6 +11,7 @@
 \acrodef{GH2}[\textit{GH2}]{growth hormone 2}
 \acrodef{CEA}{carcinoembryonic antigen}
 \acrodef{HSD3B1}[\textit{HSD3B1}]{3-β Hydroxysteroid dehydrogenase 1}
+\acrodef{GSE}{Gene Set Enrichment}
 
 %%% Local Variables:
 %%% mode: latex
