discuss start of OUCH analysis

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -12,6 +12,8 @@
 \acrodef{CEA}{carcinoembryonic antigen}
 \acrodef{HSD3B1}[\textit{HSD3B1}]{3-β Hydroxysteroid dehydrogenase 1}
 \acrodef{GSE}{Gene Set Enrichment}
+\acrodef{OU}{Ornstein-Uhlenbeck}
+\acrodef{OUCH}{\ac{OU} Comparative Hypotheses}
 
 %%% Local Variables:
 %%% mode: latex
